style: Add Responsible

--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
 </head>
 <body>
   <main>
-      <div class="card__profile">
-        <div class="card__bg"></div>      
-        <div class="card_profile-status">
+      <div class="card__profile">     
+        <img class="bgCard" src="images/bg-pattern-card.svg" alt="">
+        <div class="card_profile-status">           
           <img class="profile_img" src="images/image-victor.jpg" alt="">
           <p class="profile_name">Victor Crest <span>26</span></p>           
-          London
-        </div>
-       
-
+          <p class="city">London</p>
+        </div>       
+        <!-- <hr> -->
         <div class="card__social-status">
           <div>
             <p class="social_title">80K</p>
